css/index.css
html, body
{
    height: 100% !important;
}

.navbar
{
    justify-content: flex-end !important;
}

body
{
    background-color:lightgray;
    color: #0d0d0e;
    transition: 1s;
}

.dark-mode
{
    background-color: #0d0d0e;
    color: lightgray;
    transition: 1s;
}

.dark-mode .btn
{
    background-color: lightgray;
    color: #0d0d0e;
}

.container
{
    min-height: 69%;
    padding-top: 50px;
}

.container h1
{
    font-size: 100px;
}

.container p
{
    font-size: 50px;
}

.btn
{
    border: 1px solid grey !important;
}

.btn:hover 
{
    background-color: grey;
    color: white !important;
    text-decoration: none;
    border: none;
}

.btn:focus
{
    box-shadow: none !important;
}

.footer
{
    position: sticky;
    text-align: center;
}

